--- a/index.html
+++ b/index.html
@@ -9,23 +9,44 @@ Informações adicionais:
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE-Edge">
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-		<link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
+	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet"
+		type="text/css">
 	</head>
-	<body class="container">
+	<body class="container" ng-app="minhaApp">
 		<div class="header-inner">
-			<h1 style="text-align: center; color: blue;">Bem vindo ao Curso de AngularJS</h1>
+			<h1 style="text-align: center; color: blue;">Bem vindo ao Curso
+				de AngularJS</h1>
+		</div>
+		<div ng-controller="primeiroController" class="well">
+			<p>Olá, {{nome}}. Bem vindo!</p>
+			<div>
+				<div>
+				</div>
+			</div>
+			<p ng-show="iniciado">Curso em Andamento!</p>
+			<p ng-hide="iniciado">Curso Terminado!</p>
+			<p ng-if="!iniciado"> Aguarde até a próxima!</p>
+			<br><br>
+			<li ng-repeat="aluno in alunos">
+				{{aluno}}
+			</li>
+			<br>
+			<button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">Finalizar</button>
+			<button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">Iniciar</button>
 		</div>
 		<div class="container-fluid container-fixed-lg footer">
 			<div class="copyright sm-text-center">
 				<p class="small no-margin pull-left sm-pull-reset">
 					<span class="hint-text">CopyRight @2019</span>
 				</p>
-			</div>			
+			</div>
 		</div>
+		<script type="text/javascript" src="assets/js/libs/angular.js"></script>
+		<script type="text/javascript" src="assets/js/app.js"></script>
+		<script type="text/javascript" src="assets/js/primeiroController.js"></script>
 	</body>
-	
-
 </html>
