--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ Informações adicionais:
 	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet"
-		type="text/css">
+        type="text/css">
+        <title>Curso do TimEzek</title>
 	</head>
 	<body class="container" ng-app="minhaApp">
 		<div class="header-inner">
@@ -23,21 +24,42 @@ Informações adicionais:
 		</div>
 		<div ng-controller="primeiroController" class="well">
 			<p>Olá, {{nome}}. Bem vindo!</p>
-			<div>
-				<div>
-				</div>
-			</div>
-			<p ng-show="iniciado">Curso em Andamento!</p>
-			<p ng-hide="iniciado">Curso Terminado!</p>
-			<p ng-if="!iniciado"> Aguarde até a próxima!</p>
-			<br><br>
-			<li ng-repeat="aluno in alunos">
-				{{aluno}}
-			</li>
-			<br>
-			<button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">Finalizar</button>
-			<button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">Iniciar</button>
-		</div>
+            <div ng-class="{'panel panel-primary':iniciado, 'panel panel-danger':!iniciado}">
+            <div class="panel-heading">
+                <h3 class="panel-title">Situação do Curso</h3>
+            </div>
+            <div class="panel-body">
+                <p ng-show="iniciado">Curso em Andamento!</p>
+                <p ng-hide="iniciado">Curso Finalizado!</p>
+                <p ng-if="!iniciado">Aguarde o próximo curso!</p>
+            </div>
+            </div>
+        <br><br>
+        <li ng-repeat="aluno in alunos">
+            {{aluno}}
+        </li>
+        <br>
+        <button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">Finalizar</button>
+        <button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">Iniciar</button>
+        <h3>Inscrição para o Curso</h3>
+        <form name="form_1">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group form-group-default">
+                        <label>Nome</label>
+                        <input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <button ng-click="submeter()" class="btn btn-primary">
+                        Envie!
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
 		<div class="container-fluid container-fixed-lg footer">
 			<div class="copyright sm-text-center">
 				<p class="small no-margin pull-left sm-pull-reset">
