--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@ Informações adicionais:
 
 <!DOCTYPE html>
 <html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE-Edge">
-	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet"
-        type="text/css">
-        <title>Curso do TimEzek</title>
-	</head>
-	<body class="container" ng-app="minhaApp">
-		<div class="header-inner">
-			<h1 style="text-align: center; color: blue;">Bem vindo ao Curso
-				de AngularJS</h1>
-		</div>
-		<div ng-controller="primeiroController" class="well">
-			<p>Olá, {{nome}}. Bem vindo!</p>
-            <div ng-class="{'panel panel-primary':iniciado, 'panel panel-danger':!iniciado}">
+
+<head>
+    <title>Curso do TimEzek</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+</head>
+
+<body class="container" ng-app="minhaApp">
+    <div class="header-inner">
+        <h1 style="text-align: center; color: green;">Bem vindo ao Curso
+            de AngularJS</h1>
+    </div>
+    <div ng-controller="primeiroController" class="well">
+        <p>Olá, {{nome}}. Bem vindo!</p>
+        <div ng-class="{'panel panel-success':iniciado, 'panel panel-danger':!iniciado}">
             <div class="panel-heading">
                 <h3 class="panel-title">Situação do Curso</h3>
             </div>
@@ -33,11 +34,25 @@ Informações adicionais:
                 <p ng-hide="iniciado">Curso Finalizado!</p>
                 <p ng-if="!iniciado">Aguarde o próximo curso!</p>
             </div>
-            </div>
+        </div>
+        <div>
+        </div>
         <br><br>
-        <li ng-repeat="aluno in alunos">
-            {{aluno}}
-        </li>
+        <h3>Alunos Cadastrados</h3>
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        Nome
+                    </th>
+                </tr>
+                <tr ng-repeat="aluno in alunos">
+                    <td>
+                        {{aluno}}
+                    </td>
+                </tr>
+            </table>
+        </div>
         <br>
         <button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">Finalizar</button>
         <button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">Iniciar</button>
@@ -47,28 +62,30 @@ Informações adicionais:
                 <div class="col-md-4">
                     <div class="form-group form-group-default">
                         <label>Nome</label>
-                        <input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno">
+                        <input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno"
+                            ng-readonly="!iniciado" ng-minlength="3">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <button ng-click="submeter()" class="btn btn-primary">
+                    <button ng-click="submeter()" class="btn btn-success" ng-disabled="!iniciado">
                         Envie!
                     </button>
                 </div>
             </div>
         </form>
     </div>
-		<div class="container-fluid container-fixed-lg footer">
-			<div class="copyright sm-text-center">
-				<p class="small no-margin pull-left sm-pull-reset">
-					<span class="hint-text">CopyRight @2019</span>
-				</p>
-			</div>
-		</div>
-		<script type="text/javascript" src="assets/js/libs/angular.js"></script>
-		<script type="text/javascript" src="assets/js/app.js"></script>
-		<script type="text/javascript" src="assets/js/primeiroController.js"></script>
-	</body>
+    <div class="container-fluid container-fixed-lg footer">
+        <div class="copyright sm-text-center">
+            <p class="small no-margin pull-left sm-pull-reset">
+                <span class="hint-text">CopyRight @2019</span>
+            </p>
+        </div>
+    </div>
+    <script type="text/javascript" src="assets/js/libs/angular.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/primeiroController.js"></script>
+</body>
+
 </html>
