Insere imagem no title (favicon)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ Informações adicionais:
 <html>
 
 <head>
-    <title>Curso do TimEzek</title>
+   <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSl4yxL94THfwv2Khy501SzeeDv82YyCAf3P1oMaqNDNJuxGJZ ">
+   <title>Curso do TimEzek</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
