--- a/index.html
+++ b/index.html
@@ -34,22 +34,39 @@ Informações adicionais:
                 <p ng-show="iniciado">Curso em Andamento!</p>
                 <p ng-hide="iniciado">Curso Finalizado!</p>
                 <p ng-if="!iniciado">Aguarde o próximo curso!</p>
+                <p>Preço do Curso: {{valor | currency : 'R$ '}}</p>
+                <p>Ultima atualização: {{hoje | date : 'dd/MM/yy'}}</p>
             </div>
         </div>
         <div>
+            <label>Definir Preço: </label>
+            <input type="number" id="valor" name="valor" ng-model="valor">
         </div>
         <br><br>
         <h3>Alunos Cadastrados</h3>
+        <div>
+            <label>Pequisar por nome: </label>
+            <input type="text" ng-model="filtro">
+        </div>
         <div class="table-responsive">
             <table class="table table-striped">
                 <tr>
                     <th>
                         Nome
+                       <button ng-click="ordenarPorNome()">Ordernar Por Nome</button>
+                       
+                    </th>
+                     <th>
+                        Idade
+                        <button ng-click="ordenarPorIdade()">Ordernar Por Idade</button>
                     </th>
                 </tr>
-                <tr ng-repeat="aluno in alunos">
+                <tr ng-repeat="aluno in alunos | filter: filtro">
                     <td>
-                        {{aluno}}
+                        {{aluno.nome}}
+                    </td>
+                     <td>
+                        {{aluno.idade}}
                     </td>
                 </tr>
             </table>
@@ -65,6 +82,13 @@ Informações adicionais:
                         <label>Nome</label>
                         <input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno"
                             ng-readonly="!iniciado" ng-minlength="3">
+                    </div>
+                </div>
+                 <div class="col-md-4">
+                    <div class="form-group form-group-default">
+                        <label>Idade</label>
+                        <input class="form-control" type="number" id="idade_aluno" ng-model="idade_aluno"
+                            ng-readonly="!iniciado">
                     </div>
                 </div>
             </div>
