--- a/index.html
+++ b/index.html
@@ -24,92 +24,25 @@ Informações adicionais:
         <h1 style="text-align: center; color: green;">Bem vindo ao Curso
             de AngularJS</h1>
     </div>
-    <div ng-controller="primeiroController" class="well">
-        <p>Olá, {{nome}}. Bem vindo!</p>
-        <div ng-class="{'panel panel-success':iniciado, 'panel panel-danger':!iniciado}">
-            <div class="panel-heading">
-                <h3 class="panel-title">Situação do Curso</h3>
-            </div>
-            <div class="panel-body">
-                <p ng-show="iniciado">Curso em Andamento!</p>
-                <p ng-hide="iniciado">Curso Finalizado!</p>
-                <p ng-if="!iniciado">Aguarde o próximo curso!</p>
-                <p>Preço do Curso: {{valor | currency : 'R$ '}}</p>
-                <p>Ultima atualização: {{hoje | date : 'dd/MM/yy'}}</p>
-            </div>
+    <nav class="navbar" ng-controller="menuController">
+        <div style="text-align: center; color: gray;" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <button type="button" class="btn btn-success" ng-click="irInicio()">
+                    <li><a style="color: aliceblue">Inicial</a></li>
+                </button>
+                <button ng-click="irListagem()" type="button" class="btn btn-success ">
+                    <li><a style="color: aliceblue">Alunos</a></li>
+                </button>
+                <button ng-click="irCadastro()" type="button" class="btn btn-success">
+                    <li><a style="color: aliceblue">Cadastro</a></li>
+                </button>
+                <button ng-click="irPrevisao()" type="button" class="btn btn-success">
+                    <li><a style="color: aliceblue">Previsao</a></li>
+                </button>
+            </ul>
         </div>
-        <div>
-            <label>Definir Preço: </label>
-            <input type="number" id="valor" name="valor" ng-model="valor">
-        </div>
-        <br><br>
-        <h3>Alunos Cadastrados</h3>
-        <div>
-            <label>Pequisar por nome: </label>
-            <input type="text" ng-model="filtro">
-        </div>
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <tr>
-                    <th>
-                        Nome
-                        <button ng-click="ordenarPorNome()">Ordernar Por Nome</button>
-
-                    </th>
-                    <th>
-                        Idade
-                        <button ng-click="ordenarPorIdade()">Ordernar Por Idade</button>
-                    </th>
-                </tr>
-                <tr ng-repeat="aluno in alunos | filter: filtro">
-                    <td>
-                        {{aluno.nome}}
-                    </td>
-                    <td>
-                        {{aluno.idade}}
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <br>
-        <button ng-show="iniciado" ng-click="finalizar()" class="btn btn-danger">Finalizar</button>
-        <button ng-hide="iniciado" ng-click="iniciar()" class="btn btn-success">Iniciar</button>
-        <h3>Inscrição para o Curso</h3>
-        <div ng-controller="novaInscricaoController" class="well">
-            <form name="form_1">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group form-group-default">
-                            <label>Nome</label>
-                            <input class="form-control" type="text" id="nome_aluno" name="nome_aluno" ng-model="nome_aluno"
-                                ng-minlength="3">
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="form-group form-group-default">
-                            <label>Idade</label>
-                            <input class="form-control" type="number" id="idade_aluno" ng-model="idade_aluno">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <button ng-click="submeter()" class="btn btn-success" ng-disabled="!iniciado">
-                            Envie!
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-    </div>
-    <div class="well" ng-controller="previsaoTempoController">
-        <h3>Previsao do Tempo</h3>
-        <h3>{{tempo.name}}, MG</h3>
-        <h4>Local: {{tempo.name}}</h4>
-        <h4>Temperatura: {{tempo.main.temp}}</h4>
-        <h4>Min:{{tempo.main.temp_min}}C e Max: {{tempo.main.temp_max}}C</h4>
-    </div>
+    </nav>
+    <div ui-view></div>
     <div class="container-fluid container-fixed-lg footer">
         <div class="copyright sm-text-center">
             <p class="small no-margin pull-left sm-pull-reset">
@@ -119,11 +52,14 @@ Informações adicionais:
     </div>
     <script type="text/javascript" src="assets/js/libs/angular.js"></script>
     <script type="text/javascript" src="assets/js/libs/ngResource.js"></script>
+    <script type="text/javascript" src="assets/js/libs/angular-ui-router.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <script type="text/javascript" src="assets/js/primeiroController.js"></script>
+    <script type="text/javascript" src="assets/js/menuController.js"></script>
     <script type="text/javascript" src="assets/js/previsaoTempoController.js"></script>
     <script type="text/javascript" src="assets/js/alunosCollectionService.js"></script>
     <script type="text/javascript" src="assets/js/novaInscricaoController.js"></script>
+    <script type="text/javascript" src="assets/js/cadastrarAlunoDirective.js"></script>
 </body>
 
 </html>
